syntax = "proto3";
package orders;

option go_package = "orders_grpc/orders_grpc";

message OrderListRequest {
  string userId = 1;
}

message CartItem {
  string id = 1;
  string productId = 2;
  string title = 3;
  string description = 4;
  float price = 5;
  string image = 6;
}

message StartOrderRequest {
  string userId = 1;
  repeated CartItem cartItems = 2;
}

message StartOrderResponse {
  string id = 1;
  float paymentAmount = 2;
}

message Product {
  string id = 1;
  string title = 2;
  string description = 3;
  float  price = 4;
  string image = 5;
}

message Order {
  enum OrderStatus {
    _ = 0;
    STARTED = 1;
    COMPLETED = 2;
  }

  string id = 1;
  string userId = 2;
  float paymentAmount = 3;
  string createdAt = 4;
  OrderStatus status = 5;
  repeated Product products = 6;
}

message OrderListResponse {
  repeated Order orders = 1;
}

service OrdersService {
  rpc StartOrder(StartOrderRequest) returns (StartOrderResponse) {}
  rpc ListOrders(OrderListRequest) returns (OrderListResponse) {}
}
